# fastapi_authentication

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  example.env  main.py  mongod.conf  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_19_1635-b0b370d11784_create.py  2024_07_28_1735-245341cf159f_create_user_model.py  2024_08_19_2044-6ba1b4be4de5_init.py
api/: __init__.py
api/auth/: utils.py  validation.py  views.py
api/notes/: crud.py  dependencies.py  schemas.py  views.py
api/users/: crud.py  dependencies.py  schemas.py  views.py
auth/: Dockerfile  README.md  alembic.ini  pyproject.toml  utils.py
auth/auth/: dependencies.py  main.py
auth/auth/api/: __init__.py
auth/auth/api/auth/: utils.py  validation.py  views.py
auth/auth/api/users/: crud.py  dependencies.py  views.py
auth/auth/auth/: utils.py
auth/auth/models/: db_manager.py  user.py
auth/auth/utils/: jwt.py  user.py
auth/auth_app/: config.py  dependencies.py
auth/auth_app/alembic/: env.py
auth/auth_app/alembic/versions/: 2024_10_14_1539-9eb66ac029ae_init.py
auth/auth_app/api/: __init__.py
auth/auth_app/api/auth/: views.py
auth/auth_app/api/users/: crud.py  schemas.py  views.py
auth/auth_app/models/: __init__.py  base.py  db_manager.py  user.py
auth/auth_app/utils/: jwt.py  user.py
auth/certs/: jwt-private.pem  jwt-public.pem
backend/: Dockerfile
backend/app/: main.py
backend/app/alembic/versions/: 2024_09_08_1710-9a8549311846_.py
backend/app/api/auth/: utils.py  validation.py  views.py
backend/app/api/notes/: crud.py
backend/app/api/users/: crud.py  dependencies.py  views.py
backend/app/auth/: utils.py
backend/app/core/: config.py
backend/app/models/: __init__.py  mongo_db_manager.py  note.py  user.py
catalog/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
catalog/app/: config.py  main.py
catalog/app/alembic/: env.py
catalog/app/alembic/versions/: 2024_10_15_0807-aa4a70621955_init.py
catalog/app/api/: __init__.py
catalog/app/api/notes/: dependencies.py  views.py
catalog/app/core/: config.py
catalog/app/models/: __init__.py  db_manager.py
core/: config.py
core/models/: __init__.py  db_manager.py  mongo_db_manager.py  note.py  user.py
gateway/: README.md  nginx.conf
statistic/: Dockerfile  pyproject.toml
statistic/statistic_app/: config.py  main.py
statistic/statistic_app/models/: __init__.py  db_manager.py
