[project]
name = "statistic"
version = "0.1.0"
description = "Statisctic service for collecting info about user`s requests"
authors = ["Dmitry <da-boyko@mail.ru>"]
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.116.1",
    "faststream>=0.5.48",
    "granian[reload]>=2.5.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "app_scripts",
]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    "FA102", # Missing `from __future__ import annotations`, but uses PEP 585 collection
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D202", # No blank lines allowed after function docstring (found 1)
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "FIX002", # Line contains TODO, consider resolving the issue
    "TD002", # Missing author in TODO
    "TD003", # Missing issue link on the line following this TODO
    "RUF001", # String contains ambiguous
    "RUF002", # String contains ambiguous
    "RUF003", # String contains ambiguous
    "W293", # Blank line contains whitespace
    "G004", # Logging statement uses f-string
    "COM812", # Trailing comma missing
]
extend-select = [
    "D401", # Non-imperative-mood
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores] # Игнорированные ошибки для определенных файлов: тестов
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "PLR2004",
    "ANN001",
    "ANN201",
    "ANN202",
    "ARG001",
    "D103",
    "F401",
    "F403",
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-gettext]
function-names = ["_", "gettext", "ngettext", "ugettetxt"]
